Table users {
  id int [pk, increment]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  full_name varchar(255) [not null]
  user_type varchar(50) [not null, note: 'vendor, manager']
  membership_plan varchar(50) [not null, note: 'personal, premium, enterprise']
  membership_start date [not null]
  membership_end date [not null]
  is_owner bool [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table teams {
  id int [pk, increment]
  owner_id int [not null, ref: > users.id]
  name varchar(255) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table team_members {
  id int [pk, increment]
  team_id int [not null, ref: > teams.id]
  user_id int [not null, ref: > users.id]
  invited_by int [not null, ref: > users.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table permissions {
  id int [pk, increment]
  type varchar(50) [not null, unique, note: 'edit, view']
}

Table modules {
  id int [pk, increment]
  name varchar(50) [not null, unique, note: 'Orders, Inventory, Vendors, Accounts, Payments, Adjustments']
}

Table team_member_access {
  id int [pk, increment]
  team_member_id int [not null, ref: > team_members.id]
  module_id int [not null, ref: > modules.id]
  permission_id int [not null, ref: > permissions.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table vendors {
  id int [pk, increment]
  admin_id int [not null, ref: > users.id, note: 'The manager/admin who added this public vendor']
  name varchar(255) [not null]
  contact varchar(255) [not null]
  notes text
  is_virtual bool [not null, default: false, note: 'True if this represents the admin as a virtual vendor']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table products {
  id int [pk, increment]
  admin_id int [not null, ref: > users.id, note: 'The manager/admin who owns this private product list']
  vendor_id int [ref: > vendors.id, note: 'The public vendor or virtual vendor this product is sourced from']
  added_by_user_id int [not null, ref: > users.id, note: 'The user (admin or team member) who added this product']
  sku varchar(100) [not null]
  name varchar(255) [not null]
  type varchar(100) [not null]
  stock int [not null, default: 0]
  unit_cost_usd decimal(10,2) [not null, default: 0]
  is_active bool [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table ebay_orders {
  id int [pk, increment]
  admin_id int [not null, ref: > users.id, note: 'The manager/admin who owns this order']
  uploaded_by_user_id int [not null, ref: > users.id, note: 'The user (admin or team member) who uploaded this order']
  order_date date [not null]
  order_number varchar(100) [not null, unique]
  sku varchar(100) [not null]
  product_id int [ref: > products.id, note: 'Link to the product in the catalog']
  item_title varchar(255) [not null]
  ordered_qty int [not null, default: 1]
  order_type varchar(50) [not null]
  gross_amount_usd decimal(12,2) [not null]
  fees_usd decimal(12,2) [not null]
  sourcing_cost_usd decimal(12,2) [not null]
  shipping_cost_usd decimal(12,2) [not null]
  gross_profit_usd decimal(12,2) [not null]
  source_file_name varchar(255) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table payments {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  amount_usd decimal(12,2) [not null]
  currency varchar(10) [not null, default: 'USD']
  status varchar(50) [not null, note: 'pending, paid, failed, refunded']
  payment_method varchar(50) [not null]
  transaction_id varchar(100) [not null]
  description varchar(255) [not null]
  paid_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}
